--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.39"
+env_logger = "0.11.5"
 log = "0.4.22"
 octocrab = "0.42.1"
 opensearch = "2.3.0"
