--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.39"
+color-eyre = "0.6.3"
 env_logger = "0.11.5"
 log = "0.4.22"
 octocrab = "0.42.1"
@@ -12,5 +13,4 @@ opensearch = "2.3.0"
 ratelimit = "0.10.0"
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
-thiserror = "2.0.6"
 tokio = { version = "1.42.0", features = ["full"] }
